Created new project using prisma and supabsse to create most advanced auth system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,12 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/logger.js", "src/lib/middleware.js", "src/lib/supabase.js"],
   "exclude": ["node_modules"]
 }
