added magic link logi

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
+    "google-auth-library": "^9.15.0",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.9",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "prisma": "^6.1.0",
