modified the conversion endpoints

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "google-auth-library": "^9.15.0",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
     "nanoid": "^5.0.9",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "prisma": "^6.1.0",
+    "puppeteer": "^23.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "twilio": "^5.4.0",
