--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.2",
     "nodemon": "^3.1.9",
     "postcss": "^8",
