--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
     "google-auth-library": "^9.15.0",
