--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "twilio": "^5.4.0",
+    "ua-parser-js": "^2.0.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
