--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.8.0",
     "nanoid": "^5.0.9",
-    "next": "15.1.2",
+    "next": "^14.1.0",
     "next-auth": "^4.24.11",
     "prisma": "^6.1.0",
     "puppeteer": "^23.11.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "twilio": "^5.4.0",
     "ua-parser-js": "^2.0.2",
     "winston": "^3.17.0"
