--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
+    "geist": "^1.3.1",
     "google-auth-library": "^9.15.0",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
