--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@types/fs-extra": "^11.0.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
+    "fs-extra": "^11.3.0",
     "geist": "^1.3.1",
     "google-auth-library": "^9.15.0",
     "ioredis": "^5.4.2",
