--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express-session": "^1.18.1",
     "formidable": "^3.5.2",
     "fs-extra": "^11.3.0",
     "geist": "^1.3.1",
@@ -27,6 +28,9 @@
     "nanoid": "^5.0.9",
     "next": "^14.1.0",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prisma": "^6.1.0",
     "puppeteer": "^23.11.1",
     "react": "^18.2.0",
