--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs-extra": "^11.3.0",
     "geist": "^1.3.1",
     "google-auth-library": "^9.15.0",
+    "googleapis": "^148.0.0",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.8.0",
