--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@prisma/client": "^6.1.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -25,20 +28,26 @@
     "googleapis": "^148.0.0",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
-    "mammoth": "^1.8.0",
+    "mammoth": "^1.9.0",
+    "multer": "^1.4.5-lts.2",
     "nanoid": "^5.0.9",
     "next": "^14.1.0",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-parse": "^1.1.1",
+    "pptx-parser": "^1.1.7-beta.9",
     "prisma": "^6.1.0",
     "puppeteer": "^23.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "twilio": "^5.4.0",
     "ua-parser-js": "^2.0.2",
-    "winston": "^3.17.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -48,7 +57,9 @@
     "@types/cors": "^2.8.17",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
